# capnp-angy

./: Cargo.toml  book.toml  run_test.sh
doc/: SUMMARY.md  requirements.md
src/: is_broken.rs  main.rs  util.rs
test-cases/C01/: C01-after.capnp
test-cases/C02/: C02-after.capnp  C02-before.capnp
test-cases/C03/: C03-after.capnp
test-cases/C04/: C04-after.capnp
test-cases/C05/: C05-after.capnp
test-cases/C06/: C06-after.capnp  C06-before.capnp
test-cases/C07/: C07-after.capnp
test-cases/N02/: N02-after.capnp
test-cases/N03/: N03-after.capnp  N03-before.capnp
test-cases/N04/: N04-after.capnp
test-cases/N05/: N05-after.capnp
test-cases/N06/: N06-after.capnp
test-cases/N07/: N07-after.capnp
test-cases/N08/: N08-after.capnp  N08-before.capnp
