[package]
name = "capnpc-angy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.17.1"
capnpc = "0.17.1"
clap = { version = "4.3.11", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = 2
